White space at the bottom of page on mobile dsplay : Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
 }
 body {
     /* border: 5px solid crimson; */
+    background-color: lightgray;
 }
 
 html {
